fix svgs not shown on mobile

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 .main2 {
-  overflow:hidden;
   max-height: 35vh;
   max-width: 100vw;
   display: grid;
